// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookButton test render test render correctly 1`] = `
<Button
  facebookSignIn={[Function]}
  facebookSignOut={[Function]}
  fb="fb"
/>
`;

exports[`withFacebook test render test render correctly 1`] = `
<class_1
  facebookSignIn={[Function]}
  facebookSignOut={[Function]}
  fb="fb"
/>
`;
